// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/channel/ChannelMembers should match snapshot 1`] = `
<AdminPanel
  button={
    <ModalToggleButton
      className="btn btn-primary"
      dialogProps={
        Object {
          "channel": Object {
            "create_at": 0,
            "creator_id": "id",
            "delete_at": 0,
            "display_name": "name",
            "extra_update_at": 0,
            "group_constrained": false,
            "header": "header",
            "id": "channel-1",
            "last_post_at": 0,
            "name": "DN",
            "purpose": "purpose",
            "scheme_id": "id",
            "team_id": "team_id",
            "total_msg_count": 0,
            "type": "O",
            "update_at": 0,
          },
          "channelId": "channel-1",
          "excludeUsers": Object {},
          "includeUsers": Object {},
          "onAddCallback": [Function],
          "skipCommit": true,
          "teamId": "team_id",
        }
      }
      dialogType={[Function]}
      id="addChannelMembers"
    >
      <FormattedMessage
        defaultMessage="Add Members"
        id="admin.team_settings.team_details.add_members"
        values={Object {}}
      />
    </ModalToggleButton>
  }
  className=""
  id="channelMembers"
  subtitleDefault="A list of users who are currently in the channel right now"
  subtitleId="admin.channel_settings.channel_detail.membersDescription"
  titleDefault="Members"
  titleId="admin.channel_settings.channel_detail.membersTitle"
>
  <UserGrid
    excludeUsers={Object {}}
    includeUsers={Object {}}
    loadPage={[Function]}
    loading={true}
    memberships={
      Object {
        "user-1": Object {
          "channel_id": "channel_id",
          "last_update_at": 0,
          "last_viewed_at": 0,
          "mention_count": 0,
          "msg_count": 0,
          "notify_props": Object {
            "desktop": "default",
            "email": "default",
            "ignore_channel_mentions": "default",
            "mark_unread": "all",
            "push": "default",
          },
          "roles": "channel_user",
          "scheme_admin": false,
          "scheme_user": true,
          "user_id": "user-1",
        },
        "user-2": Object {
          "channel_id": "channel_id",
          "last_update_at": 0,
          "last_viewed_at": 0,
          "mention_count": 0,
          "msg_count": 0,
          "notify_props": Object {
            "desktop": "default",
            "email": "default",
            "ignore_channel_mentions": "default",
            "mark_unread": "all",
            "push": "default",
          },
          "roles": "channel_user",
          "scheme_admin": false,
          "scheme_user": true,
          "user_id": "user-2",
        },
        "user-3": Object {
          "channel_id": "channel_id",
          "last_update_at": 0,
          "last_viewed_at": 0,
          "mention_count": 0,
          "msg_count": 0,
          "notify_props": Object {
            "desktop": "default",
            "email": "default",
            "ignore_channel_mentions": "default",
            "mark_unread": "all",
            "push": "default",
          },
          "roles": "channel_user",
          "scheme_admin": false,
          "scheme_user": true,
          "user_id": "user-3",
        },
      }
    }
    removeUser={[Function]}
    scope="channel"
    search={[Function]}
    term=""
    totalCount={3}
    updateMembership={[Function]}
    users={
      Array [
        Object {
          "auth_data": "",
          "auth_service": "",
          "create_at": 0,
          "delete_at": 0,
          "email": "",
          "email_verified": true,
          "first_name": "",
          "id": "user-1",
          "is_bot": false,
          "last_name": "",
          "last_picture_update": 0,
          "locale": "",
          "nickname": "",
          "notify_props": Object {
            "channel": "false",
            "comments": "never",
            "desktop": "default",
            "desktop_sound": "false",
            "email": "false",
            "first_name": "false",
            "mark_unread": "mention",
            "mention_keys": "",
            "push": "none",
            "push_status": "offline",
          },
          "position": "",
          "roles": "",
          "terms_of_service_create_at": 0,
          "terms_of_service_id": "",
          "update_at": 0,
          "username": "some-user",
        },
        Object {
          "auth_data": "",
          "auth_service": "",
          "create_at": 0,
          "delete_at": 0,
          "email": "",
          "email_verified": true,
          "first_name": "",
          "id": "user-2",
          "is_bot": false,
          "last_name": "",
          "last_picture_update": 0,
          "locale": "",
          "nickname": "",
          "notify_props": Object {
            "channel": "false",
            "comments": "never",
            "desktop": "default",
            "desktop_sound": "false",
            "email": "false",
            "first_name": "false",
            "mark_unread": "mention",
            "mention_keys": "",
            "push": "none",
            "push_status": "offline",
          },
          "position": "",
          "roles": "",
          "terms_of_service_create_at": 0,
          "terms_of_service_id": "",
          "update_at": 0,
          "username": "some-user",
        },
        Object {
          "auth_data": "",
          "auth_service": "",
          "create_at": 0,
          "delete_at": 0,
          "email": "",
          "email_verified": true,
          "first_name": "",
          "id": "user-3",
          "is_bot": false,
          "last_name": "",
          "last_picture_update": 0,
          "locale": "",
          "nickname": "",
          "notify_props": Object {
            "channel": "false",
            "comments": "never",
            "desktop": "default",
            "desktop_sound": "false",
            "email": "false",
            "first_name": "false",
            "mark_unread": "mention",
            "mention_keys": "",
            "push": "none",
            "push_status": "offline",
          },
          "position": "",
          "roles": "",
          "terms_of_service_create_at": 0,
          "terms_of_service_id": "",
          "update_at": 0,
          "username": "some-user",
        },
      ]
    }
  />
</AdminPanel>
`;

exports[`admin_console/team_channel_settings/channel/ChannelMembers should match snapshot loading no users 1`] = `
<AdminPanel
  button={
    <ModalToggleButton
      className="btn btn-primary"
      dialogProps={
        Object {
          "channel": Object {
            "create_at": 0,
            "creator_id": "id",
            "delete_at": 0,
            "display_name": "name",
            "extra_update_at": 0,
            "group_constrained": false,
            "header": "header",
            "id": "channel-1",
            "last_post_at": 0,
            "name": "DN",
            "purpose": "purpose",
            "scheme_id": "id",
            "team_id": "team_id",
            "total_msg_count": 0,
            "type": "O",
            "update_at": 0,
          },
          "channelId": "channel-1",
          "excludeUsers": Object {},
          "includeUsers": Object {},
          "onAddCallback": [Function],
          "skipCommit": true,
          "teamId": "team_id",
        }
      }
      dialogType={[Function]}
      id="addChannelMembers"
    >
      <FormattedMessage
        defaultMessage="Add Members"
        id="admin.team_settings.team_details.add_members"
        values={Object {}}
      />
    </ModalToggleButton>
  }
  className=""
  id="channelMembers"
  subtitleDefault="A list of users who are currently in the channel right now"
  subtitleId="admin.channel_settings.channel_detail.membersDescription"
  titleDefault="Members"
  titleId="admin.channel_settings.channel_detail.membersTitle"
>
  <UserGrid
    excludeUsers={Object {}}
    includeUsers={Object {}}
    loadPage={[Function]}
    loading={true}
    memberships={Object {}}
    removeUser={[Function]}
    scope="channel"
    search={[Function]}
    term=""
    totalCount={0}
    updateMembership={[Function]}
    users={Array []}
  />
</AdminPanel>
`;
